# digital-twin-framework

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: engine.md
examples/: run_basic_demo.py  run_components_demo.py  run_routing_demo.py  run_routing_v2.py
src/dtfw/components/: base.py  components_demo.py  queue.py  router.py  routing_demo.py  server.py  sink.py  source.py
src/dtfw/core/: engine.py  model.py
src/dtfw/experiments/: routing_sweep.py
src/dtfw/metrics/: recorder.py
src/dtfw/scenarios/: basic_model_demo.py  basic_queue_demo.py  components_demo.py  routing_demo_v2.py
tests/: test_components_smoke.py  test_engine.py  test_experiments.py  test_metrics.py  test_routing_demo.py  test_routing_demo_v2.py
